[gd_scene load_steps=4 format=2]

[ext_resource path="res://art/slingshot.png" type="Texture" id=1]
[ext_resource path="res://Slingshot.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 45.0
height = 64.0

[node name="Slingshot" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 11.75, -60.7273 )
scale = Vector2( 0.400568, 0.400568 )
texture = ExtResource( 1 )

[node name="LeftLine" type="Line2D" parent="."]
points = PoolVector2Array( -89, -104, 38, -107 )
default_color = Color( 0.258824, 0.196078, 0.156863, 1 )

[node name="RightLine" type="Line2D" parent="."]
points = PoolVector2Array( -89, -104, -14, -109 )
default_color = Color( 0.258824, 0.196078, 0.156863, 1 )

[node name="TouchArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TouchArea"]
position = Vector2( 10, -71 )
shape = SubResource( 1 )

[node name="SlingshotCenter" type="Position2D" parent="."]
position = Vector2( 12, -106 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[connection signal="input_event" from="TouchArea" to="." method="_on_TouchArea_input_event"]
